Added config.js file

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,9 @@
     <!--fontawesome-->
 	<script src="https://kit.fontawesome.com/f0f14d8351.js" crossorigin="anonymous"></script>
 
+    <script>
+         const cred=<%- JSON.stringify(cred); %>
+    </script>
     <style>
         *{
             padding:0px;
